--- a/css/layout.css
+++ b/css/layout.css
@@ -440,6 +440,6 @@ hr {
 /* Colors of sections just for referencing purpose*/
 
 body {
-  background-color: #EFF5FF;
+  background-color: white;
 }
 
