--- a/css/product.css
+++ b/css/product.css
@@ -6,30 +6,12 @@
 
 
 /* spacings */
-th, td {
-    padding: 10px;
-    border: 1px solid black;
+#drinks-pairing {
+  padding: 0;
+  margin-bottom: 80px;
 }
 
-/* Fonts for Tables */
-
-th {
-    text-decoration: none;
-    font-style: normal;
-    color: black;
-    font-family: "givonic-semibold", Arial, sans-serif;
-    font-size: 20px;
-    font-kerning: -20px;
-  }
-  
-  td{
-    text-decoration: none;
-    font-style: normal;
-    color: black;
-    font-family: "givonic-light", Arial, sans-serif;
-    font-size: 16px;
-    font-kerning: -20px;
-  }
-
-  
-
+.product-content {
+  padding-bottom: 40px;
+  margin: 0 auto;
+}
