--- a/css/search-page.css
+++ b/css/search-page.css
@@ -1,12 +1,14 @@
+.search-bar-container{
+  border-bottom: 1.5px solid black;
+}
+
 #searchbar{
   max-width: 1068px;
   height: 50px; 
-  margin-left: 16px;
   padding: 0;
   font-size: 28px;
   font-family: "givonic-semibold";
   border: 0;
-  border-bottom: 1px solid black;
   background-color: transparent;
   border-radius: 0;
   box-sizing: border-box;
@@ -21,6 +23,12 @@
 
 /* spacing */
 #searchbar {
-    margin-bottom: 40px;
-    padding: 0;
+  margin-left: 16px;
+  margin-bottom: 0;
+}
+
+.search-bar-container{
+  padding-bottom: 8px;
+  margin-bottom: 40px;
+  border-bottom: 1.5px solid black;
 }
