--- a/css/food.css
+++ b/css/food.css
@@ -1,9 +1,42 @@
-/* food page*/
-.filter {
+/* filter */
+.filter-container{
+    position: relative;
+}
+
+.filter-button{
     grid-column-start: 8;
     grid-column-end: 9;
-    
+    cursor: pointer;
+    justify-self: right;
+    align-self: right;
+}
+
+.filter-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #f9f9f9;
+    padding: 8px;
+    border: 1px solid #ccc;
+    z-index: 1;
+}
+
+.filter-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
+
+.filter-menu li {
+    padding: 4px 0;
+  }
+
+.filter-menu a {
+    color: #333;
+    text-decoration: none;
+  }
+
 
 .food-top{
     width: 100vw;
