--- a/css/button.css
+++ b/css/button.css
@@ -1,19 +1,3 @@
-/* Fonts */
-@font-face {
-    font-family: 'bodoni';
-    src: url("fonts/bodoni.ttf") format('truetype');
-  }
-
-@font-face {
-    font-family: 'givonic-light';
-    src: url("fonts/givonic-light.ttf") format('truetype');
-  }
-
-@font-face {
-    font-family: 'givonic-semibold';
-    src: url("fonts/givonic-semibold.ttf") format('truetype');
-  }
-
 /* Buttons and its hover effect */
 
     /* buttons - center aligns button */
@@ -125,6 +109,11 @@
     height: 24px;
 }
 
+.white_hamburgericon {
+    width: 24px;
+    height: 24px;
+}
+
 .black-searchicon {
     width: 24px;
     height: 24px;
@@ -198,3 +187,138 @@
 }
 
 */
+
+/**/
+
+
+/* Media Queries */
+
+@media screen and (max-width: 1301px) {
+/* Buttons and its hover effect */
+
+    /* buttons - center aligns button */
+    .buttons-layout {
+        grid-column-start: 4;
+        grid-column-end: 6;
+        margin-top: 20px;
+      }
+    
+        /* white button*/
+    .white-button {
+        display: block;
+        padding: 12px 28px 12px 28px;
+        margin: auto;
+        margin-bottom: 0;
+        background-color: white;
+        font-family: "givonic-light";
+        font-size: 24px;
+        color: black;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+        
+    }
+    
+    .white-button:hover{
+        transform: scale(0.95);
+    }
+    
+    .white-button:not(:hover){
+        transform: scale(1);
+    }
+    
+        /* blue button*/
+    .blue-button {
+        display: block;
+        padding: 12px 28px 12px 28px;
+        margin: auto;
+        margin-bottom: 0;
+        background-color: #000DFF;
+        font-family: "givonic-light";
+        font-size: 24px;
+        color: white;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+        
+    }
+    
+    .blue-button:hover{
+        transform: scale(0.95);
+    }
+    
+    .blue-button:not(:hover){
+        transform: scale(1);
+    }
+    
+        /* specific for landing-reserve button */
+    .reserve-button {
+        width: 100%;
+        height: auto;
+        max-width: 194px;
+        display: block;
+        margin: 0 auto;
+    }
+    
+    
+    /* Navigation Bar */
+    .white-brandlogo {
+        width: 171px;
+        height: 30px;
+    }
+    
+    .black-brandlogo {
+        width: 171px;
+        height: 30px;
+    }
+    
+    .white-searchicon {
+        width: 24px;
+        height: 24px; 
+    }
+    
+    .black-searchicon {
+        width: 24px;
+        height: 24px; 
+    }
+    
+    
+    /* General buttons */
+    .dynamic-logo {
+        width: 50%;
+    }
+
+    .button-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    
+    .white_hamburgericon {
+        width: 24px;
+        height: 24px;
+    }
+
+    .hamburger-menu {
+        width: 24px;
+        height: 24px;
+    }
+    
+    .black-searchicon {
+        width: 24px;
+        height: 24px;
+    }
+    
+    .filter-button{
+        width: 52px;
+        height: 19px;
+    }
+    
+    /* Footer */
+    .footer-socials-icons {
+        width: 32px;
+        height: 32px;
+    }
+}
