5th june - 5.02pm

--- a/css/button.css
+++ b/css/button.css
@@ -67,258 +67,17 @@
 }
 
 
-/* Navigation Bar */
-.white-brandlogo {
-    width: 171px;
-    height: 30px;
-}
-
-.black-brandlogo {
-    width: 171px;
-    height: 30px;
-}
-
-.white-searchicon {
-    width: 24px;
-    height: 24px; 
-}
-
-.black-searchicon {
-    width: 24px;
-    height: 24px; 
-}
-
-
 /* General buttons */
-.dynamic-logo {
-    width: 100%;
-    height: auto;
-    max-width: 147px;
-    display: block;
-    margin: 0 auto;
-}
-
 .button-link {
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-.white-searchicon {
-    width: 24px;
-    height: 24px;
-}
 
-.white_hamburgericon {
-    width: 24px;
-    height: 24px;
-}
-
-.black-searchicon {
-    width: 24px;
-    height: 24px;
-}
-
-.filter-button{
-    width: 52px;
-    height: 19px;
-}
-
-/* Footer */
-.footer-socials-icons {
-    width: 32px;
-    height: 32px;
-}
-
-/* 
-.menu-button {
-    width: auto;
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.instagram-button {
-    width: 100%;
-    height: auto;
-    max-width: 160px;
-    display: block;
-    margin: 0 auto;
-}
-
-.grey-find-a-table{
-    width: 184px;
-    height: 47px
-}
-
-.blue-find-a-table{
-    width: 184px;
-    height: 47px
-}
-
-.grey-continue{
-    width: 152px;
-    height: 47px
-}
-
-.blue-continue{
-    width: 152px;
-    height: 47px
-}
-
-.grey-payment{
-    width: 148px;
-    height: 47px
-}
-
-.blue-payment{
-    width: 148px;
-    height: 47px
-}
-
-.bta-button {
-    width: 235px;
-    height: 47px;
-}
-
-#about-reserve-button{
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-*/
-
-/**/
-
+  /***********************************************************************************************/
 
 /* Media Queries */
 
-@media screen and (max-width: 1301px) {
-/* Buttons and its hover effect */
-
-    /* buttons - center aligns button */
-    .buttons-layout {
-        grid-column-start: 4;
-        grid-column-end: 6;
-        margin-top: 20px;
-      }
-    
-        /* white button*/
-    .white-button {
-        display: block;
-        padding: 12px 28px 12px 28px;
-        margin: auto;
-        margin-bottom: 0;
-        background-color: white;
-        font-family: "givonic-light";
-        font-size: 24px;
-        color: black;
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
-        
-    }
-    
-    .white-button:hover{
-        transform: scale(0.95);
-    }
-    
-    .white-button:not(:hover){
-        transform: scale(1);
-    }
-    
-        /* blue button*/
-    .blue-button {
-        display: block;
-        padding: 12px 28px 12px 28px;
-        margin: auto;
-        margin-bottom: 0;
-        background-color: #000DFF;
-        font-family: "givonic-light";
-        font-size: 24px;
-        color: white;
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
-        
-    }
-    
-    .blue-button:hover{
-        transform: scale(0.95);
-    }
-    
-    .blue-button:not(:hover){
-        transform: scale(1);
-    }
-    
-        /* specific for landing-reserve button */
-    .reserve-button {
-        width: 100%;
-        height: auto;
-        max-width: 194px;
-        display: block;
-        margin: 0 auto;
-    }
-    
-    
-    /* Navigation Bar */
-    .white-brandlogo {
-        width: 171px;
-        height: 30px;
-    }
-    
-    .black-brandlogo {
-        width: 171px;
-        height: 30px;
-    }
-    
-    .white-searchicon {
-        width: 24px;
-        height: 24px; 
-    }
-    
-    .black-searchicon {
-        width: 24px;
-        height: 24px; 
-    }
-    
-    
-    /* General buttons */
-    .dynamic-logo {
-        width: 50%;
-    }
-
-    .button-link {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    
-    .white_hamburgericon {
-        width: 24px;
-        height: 24px;
-    }
-
-    .hamburger-menu {
-        width: 24px;
-        height: 24px;
-    }
-    
-    .black-searchicon {
-        width: 24px;
-        height: 24px;
-    }
-    
-    .filter-button{
-        width: 52px;
-        height: 19px;
-    }
-    
-    /* Footer */
-    .footer-socials-icons {
-        width: 32px;
-        height: 32px;
-    }
+@media screen and (max-width: 390px) {
 }
